# bloodtide

./: .gitignore  Bloodtide_Technical_Spec.md  Cargo.toml  PROGRESS.md  README.md
.claude/: settings.local.json
assets/data/: affinity.toml  artifacts.toml  creatures.toml  enemies.toml  weapons.toml
assets/sprites/: sprite_schema.json  tileset_schema.json
assets/sprites/creatures/: fire_creatures_schema.json  fire_imp_schema.json  wizard_player_schema.json
assets/sprites/enemies/: goblin_king_schema.json  new_goblin_king_schema.json  sprite_schema.json
benchmarking/: index.html  package-lock.json  package.json  standalone.html
benchmarking/src/: App.jsx
research and docs/: Bloodtide_Final_Design_Document.md  ChatGPT Version.md  Claude.md  Gemini.md
src/: main.rs
src/components/: creature.rs  death_animation.rs  enemy.rs  mod.rs  player.rs  weapon.rs
src/data/: mod.rs
src/math/: crit.rs  mod.rs
src/resources/: affinity.rs  artifact_buffs.rs  debug_settings.rs  deck.rs  deck_builder.rs  director.rs  game_data.rs  game_state.rs  mod.rs  pools.rs  spatial.rs  sprite_assets.rs  tilemap.rs
src/systems/: ai.rs  animation.rs  combat.rs  creature_xp.rs  death.rs  death_animation.rs  debug_menu.rs  deck_builder_ui.rs  game_over_ui.rs  hp_bars.rs  leveling.rs  mod.rs  movement.rs  spawning.rs  tilemap.rs  tooltips.rs  ui.rs  ui_panels.rs
