[package]
name = "bloodtide"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15"
bevy_ecs_tilemap = "0.15"
noise = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rand = "0.8"


# Fast iterative dev builds - optimizes dependencies, quick local recompiles
# Usage: cargo build (default dev profile uses these settings)
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Full release optimization
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false